--- a/first.html
+++ b/first.html
@@ -61,7 +61,7 @@ var a;
              mytable+='<td>'+phone[i]+'</td>';
              mytable+='<td>'+address[i]+'</td>';
              mytable+='<td>'+gender[i]+'</td>';
-             mytable+='<td>'+'<img src="editicon.png" height="20px" width="20px" id="edit">'+'</td>';
+             mytable+='<td>'+'<a href="edit.html?id='+id[i]+'"><img src="editicon.png" height="20px" width="20px" id="edit"></a>'+'</td>';
              mytable+='<td>'+  '<img src="delete_icon.png"  height="20px" width="20px" class="delete" id='+id[i]+' >'+'</td>';
 
              mytable+='</tr>';
